# waves-rollup

./: .gitignore  Cargo.toml  README.md  deploy.sh  publish_block.sh
rollup-client/: Cargo.toml
rollup-client/src/: main.rs
rollup-crypto/: .gitignore  Cargo.toml
rollup-crypto/src/: constants.rs  lib.rs  main.rs
rollup-crypto/src/circuit/: mod.rs
rollup-crypto/src/native/: gen_test_data.rs  mod.rs
rollup-node/: deploy.js  publish_block.js
rollup-node/ride/: rollup.ride
rollup-server/: Cargo.toml
rollup-server/src/: main.rs
