[package]
name = "rollup-server"
version = "0.1.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fawkes-crypto = "2.3.0"
fawkes-crypto_derive = "0.1.2"
# fawkes-crypto = {path = "../../fawkes-crypto"}
# fawkes-crypto_derive = {path = "../../fawkes-crypto/fawkes-crypto_derive"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "=0.4"
typenum = "=1.12.0"
lazy_static = "1.4.0"
num = "0.2.1"
rocket = "0.4.7"
rocket_contrib = "0.4.5"
rocket_okapi = "0.5.1"
schemars = "0.7"
okapi = { version = "0.4.0", features = ["derive_json_schema"] }
rocksbin = "0.3.0"
rollup-crypto = { path = "../rollup-crypto" }
